minor ui: fix blockly trash icon mobile margin

--- a/theme/style.less
+++ b/theme/style.less
@@ -122,9 +122,11 @@ svg.blocklySvg {
     #filelist {
         background: transparent;
     }
-
     div.blocklyTreeRow {
         padding-bottom: 2rem !important;
+    }
+    #blocklyTrashIcon {
+        margin: 0.2rem;
     }
 }
 
